// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dva odstartovaní 1`] = `
<div
  className="Startujici__div"
>
  <div
    className="panel panel-primary"
    id={undefined}
  >
    <div
      className="panel-heading"
    >
      <span
        className="glyphicon glyphicon-list-alt"
      />
       Přihlášeni
    </div>
    <div
      className="panel-body"
    >
      <div
        className="StartujiciPanel__grid"
      >
        <div
          className="StartujiciPanel__header"
        >
          příjmení
        </div>
        <div
          className="StartujiciPanel__leftHeader"
        >
          jméno
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          narození
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          kategorie
        </div>
        <div
          className="StartujiciPanel__header"
        >
          číslo
        </div>
        <div
          className="StartujiciPanel__prijmeni"
        >
          Balabák
        </div>
        <div
          className="StartujiciPanel__jmeno"
        >
          Roman
        </div>
        <div
          className="StartujiciPanel__narozeni"
        >
          1956
        </div>
        <div
          className="StartujiciPanel__kategorie StartujiciPanel__kategorie--půlmaraton"
        >
          <span>
            <img
              alt="půlmaraton"
              height={30}
              src="pulmaraton.png"
              title="půlmaraton"
            />
             
            <img
              alt="muž"
              height={28}
              src="muz.png"
              title="muž"
            />
            60 let a více
          </span>
        </div>
        <div
          className="StartujiciPanel__startCislo"
        >
          17
        </div>
        <div
          className="StartujiciPanel__prijmeni"
        >
          Zralá
        </div>
        <div
          className="StartujiciPanel__jmeno"
        >
          Hana
        </div>
        <div
          className="StartujiciPanel__narozeni"
        >
          1999
        </div>
        <div
          className="StartujiciPanel__kategorie StartujiciPanel__kategorie--půlmaraton"
        >
          <span>
            <img
              alt="půlmaraton"
              height={30}
              src="pulmaraton.png"
              title="půlmaraton"
            />
             
            <img
              alt="žena"
              height={28}
              src="zena.png"
              title="žena"
            />
            18 - 39 let
          </span>
        </div>
        <div
          className="StartujiciPanel__startCislo"
        >
          10
        </div>
      </div>
    </div>
  </div>
  <div
    className="panel panel-success"
    id={undefined}
  >
    <div
      className="panel-heading"
    >
      <span
        className="glyphicon glyphicon-road"
      />
       Odstartováni
    </div>
    <div
      className="panel-body"
    >
      <div
        className="StartujiciPanel__grid"
      >
        <div
          className="StartujiciPanel__header"
        >
          příjmení
        </div>
        <div
          className="StartujiciPanel__leftHeader"
        >
          jméno
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          narození
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          kategorie
        </div>
        <div
          className="StartujiciPanel__header"
        >
          číslo
        </div>
        <div
          className="StartujiciPanel__prijmeni"
        >
          Balabák
        </div>
        <div
          className="StartujiciPanel__jmeno"
        >
          Roman
        </div>
        <div
          className="StartujiciPanel__narozeni"
        >
          1956
        </div>
        <div
          className="StartujiciPanel__kategorie StartujiciPanel__kategorie--půlmaraton"
        >
          <span>
            <img
              alt="půlmaraton"
              height={30}
              src="pulmaraton.png"
              title="půlmaraton"
            />
             
            <img
              alt="muž"
              height={28}
              src="muz.png"
              title="muž"
            />
            60 let a více
          </span>
        </div>
        <div
          className="StartujiciPanel__startCislo"
        >
          15
        </div>
        <div
          className="StartujiciPanel__prijmeni"
        >
          Zralá
        </div>
        <div
          className="StartujiciPanel__jmeno"
        >
          Hana
        </div>
        <div
          className="StartujiciPanel__narozeni"
        >
          1999
        </div>
        <div
          className="StartujiciPanel__kategorie StartujiciPanel__kategorie--půlmaraton"
        >
          <span>
            <img
              alt="půlmaraton"
              height={30}
              src="pulmaraton.png"
              title="půlmaraton"
            />
             
            <img
              alt="žena"
              height={28}
              src="zena.png"
              title="žena"
            />
            18 - 39 let
          </span>
        </div>
        <div
          className="StartujiciPanel__startCislo"
        >
          11
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`žádný odstartovaný 1`] = `
<div
  className="Startujici__div"
>
  <div
    className="panel panel-primary"
    id={undefined}
  >
    <div
      className="panel-heading"
    >
      <span
        className="glyphicon glyphicon-list-alt"
      />
       Přihlášeni
    </div>
    <div
      className="panel-body"
    >
      <div
        className="StartujiciPanel__grid"
      >
        <div
          className="StartujiciPanel__header"
        >
          příjmení
        </div>
        <div
          className="StartujiciPanel__leftHeader"
        >
          jméno
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          narození
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          kategorie
        </div>
        <div
          className="StartujiciPanel__header"
        >
          číslo
        </div>
        <div
          className="StartujiciPanel__prijmeni"
        >
          Balabák
        </div>
        <div
          className="StartujiciPanel__jmeno"
        >
          Roman
        </div>
        <div
          className="StartujiciPanel__narozeni"
        >
          1956
        </div>
        <div
          className="StartujiciPanel__kategorie StartujiciPanel__kategorie--půlmaraton"
        >
          <span>
            <img
              alt="půlmaraton"
              height={30}
              src="pulmaraton.png"
              title="půlmaraton"
            />
             
            <img
              alt="muž"
              height={28}
              src="muz.png"
              title="muž"
            />
            60 let a více
          </span>
        </div>
        <div
          className="StartujiciPanel__startCislo"
        >
          17
        </div>
        <div
          className="StartujiciPanel__prijmeni"
        >
          Zralá
        </div>
        <div
          className="StartujiciPanel__jmeno"
        >
          Hana
        </div>
        <div
          className="StartujiciPanel__narozeni"
        >
          1999
        </div>
        <div
          className="StartujiciPanel__kategorie StartujiciPanel__kategorie--půlmaraton"
        >
          <span>
            <img
              alt="půlmaraton"
              height={30}
              src="pulmaraton.png"
              title="půlmaraton"
            />
             
            <img
              alt="žena"
              height={28}
              src="zena.png"
              title="žena"
            />
            18 - 39 let
          </span>
        </div>
        <div
          className="StartujiciPanel__startCislo"
        >
          10
        </div>
      </div>
    </div>
  </div>
  <div
    className="panel panel-success"
    id={undefined}
  >
    <div
      className="panel-heading"
    >
      <span
        className="glyphicon glyphicon-road"
      />
       Odstartováni
    </div>
    <div
      className="panel-body"
    >
      <div
        className="StartujiciPanel__grid"
      >
        <div
          className="StartujiciPanel__header"
        >
          příjmení
        </div>
        <div
          className="StartujiciPanel__leftHeader"
        >
          jméno
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          narození
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          kategorie
        </div>
        <div
          className="StartujiciPanel__header"
        >
          číslo
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`žádný přihlášený 1`] = `
<div
  className="Startujici__div"
>
  <div
    className="panel panel-primary"
    id={undefined}
  >
    <div
      className="panel-heading"
    >
      <span
        className="glyphicon glyphicon-list-alt"
      />
       Přihlášeni
    </div>
    <div
      className="panel-body"
    >
      <div
        className="StartujiciPanel__grid"
      >
        <div
          className="StartujiciPanel__header"
        >
          příjmení
        </div>
        <div
          className="StartujiciPanel__leftHeader"
        >
          jméno
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          narození
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          kategorie
        </div>
        <div
          className="StartujiciPanel__header"
        >
          číslo
        </div>
      </div>
    </div>
  </div>
  <div
    className="panel panel-success"
    id={undefined}
  >
    <div
      className="panel-heading"
    >
      <span
        className="glyphicon glyphicon-road"
      />
       Odstartováni
    </div>
    <div
      className="panel-body"
    >
      <div
        className="StartujiciPanel__grid"
      >
        <div
          className="StartujiciPanel__header"
        >
          příjmení
        </div>
        <div
          className="StartujiciPanel__leftHeader"
        >
          jméno
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          narození
        </div>
        <div
          className="StartujiciPanel__middleHeader"
        >
          kategorie
        </div>
        <div
          className="StartujiciPanel__header"
        >
          číslo
        </div>
      </div>
    </div>
  </div>
</div>
`;
